tests/logs/test_results_3.txt
============================= test session starts =============================
platform win32 -- Python 3.13.2, pytest-9.0.2, pluggy-1.6.0 -- C:\Users\gabri\OneDrive\Documentos\Vibe Coding\backend-financas\.venv\Scripts\python.exe
cachedir: .pytest_cache
rootdir: C:\Users\gabri\OneDrive\Documentos\Vibe Coding\backend-financas
configfile: pyproject.toml
plugins: anyio-4.12.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 13 items

tests/payments/test_controller.py::test_create_payment_api PASSED        [  7%]
tests/payments/test_controller.py::test_search_payments_api PASSED       [ 15%]
tests/payments/test_controller.py::test_get_payment_by_id_api PASSED     [ 23%]
tests/payments/test_controller.py::test_update_payment_api PASSED        [ 30%]
tests/payments/test_controller.py::test_delete_payment_api PASSED        [ 38%]
tests/payments/test_parsers.py::test_parse_invoice_valid_csv PASSED      [ 46%]
tests/payments/test_parsers.py::test_parse_statement_valid_csv PASSED    [ 53%]
tests/payments/test_service.py::test_create_payment ERROR                [ 61%]
tests/payments/test_service.py::test_get_payment_by_id ERROR             [ 69%]
tests/payments/test_service.py::test_get_payment_not_found PASSED        [ 76%]
tests/payments/test_service.py::test_pdate_payment ERROR                 [ 84%]
tests/payments/test_service.py::test_delete_payment ERROR                [ 92%]
tests/payments/test_service.py::test_search_payments ERROR               [100%]

=================================== ERRORS ====================================
____________________ ERROR at setup of test_create_payment ____________________

fixturedef = <FixtureDef argname='sample_bank' scope='function' baseid='tests'>
request = <SubRequest 'sample_bank' for <Function test_create_payment>>

    @pytest.hookimpl(wrapper=True)
    def pytest_fixture_setup(fixturedef: FixtureDef, request) -> object | None:
        asyncio_mode = _get_asyncio_mode(request.config)
        if not _is_asyncio_fixture_function(fixturedef.func):
            if asyncio_mode == Mode.STRICT:
                # Ignore async fixtures without explicit asyncio mark in strict mode
                # This applies to pytest_trio fixtures, for example
>               return (yield)
                        ^^^^^

.venv\Lib\site-packages\pytest_asyncio\plugin.py:728: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
tests\conftest.py:101: in sample_bank
    bank = Bank(
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <Bank(name='Nubank', slug='nubank', is_active='None')>
kwargs = {'image_url': 'http://example.com/nubank.png', 'name': 'Nubank', 'primary_color_hex': '#8A05BE', 'slug': 'nubank'}
cls_ = <class 'src.entities.bank.Bank'>, k = 'image_url'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'image_url' is an invalid keyword argument for Bank

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
__________________ ERROR at setup of test_get_payment_by_id ___________________

fixturedef = <FixtureDef argname='sample_bank' scope='function' baseid='tests'>
request = <SubRequest 'sample_bank' for <Function test_get_payment_by_id>>

    @pytest.hookimpl(wrapper=True)
    def pytest_fixture_setup(fixturedef: FixtureDef, request) -> object | None:
        asyncio_mode = _get_asyncio_mode(request.config)
        if not _is_asyncio_fixture_function(fixturedef.func):
            if asyncio_mode == Mode.STRICT:
                # Ignore async fixtures without explicit asyncio mark in strict mode
                # This applies to pytest_trio fixtures, for example
>               return (yield)
                        ^^^^^

.venv\Lib\site-packages\pytest_asyncio\plugin.py:728: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
tests\conftest.py:101: in sample_bank
    bank = Bank(
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <Bank(name='Nubank', slug='nubank', is_active='None')>
kwargs = {'image_url': 'http://example.com/nubank.png', 'name': 'Nubank', 'primary_color_hex': '#8A05BE', 'slug': 'nubank'}
cls_ = <class 'src.entities.bank.Bank'>, k = 'image_url'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'image_url' is an invalid keyword argument for Bank

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
____________________ ERROR at setup of test_pdate_payment _____________________

fixturedef = <FixtureDef argname='sample_bank' scope='function' baseid='tests'>
request = <SubRequest 'sample_bank' for <Function test_pdate_payment>>

    @pytest.hookimpl(wrapper=True)
    def pytest_fixture_setup(fixturedef: FixtureDef, request) -> object | None:
        asyncio_mode = _get_asyncio_mode(request.config)
        if not _is_asyncio_fixture_function(fixturedef.func):
            if asyncio_mode == Mode.STRICT:
                # Ignore async fixtures without explicit asyncio mark in strict mode
                # This applies to pytest_trio fixtures, for example
>               return (yield)
                        ^^^^^

.venv\Lib\site-packages\pytest_asyncio\plugin.py:728: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
tests\conftest.py:101: in sample_bank
    bank = Bank(
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <Bank(name='Nubank', slug='nubank', is_active='None')>
kwargs = {'image_url': 'http://example.com/nubank.png', 'name': 'Nubank', 'primary_color_hex': '#8A05BE', 'slug': 'nubank'}
cls_ = <class 'src.entities.bank.Bank'>, k = 'image_url'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'image_url' is an invalid keyword argument for Bank

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
____________________ ERROR at setup of test_delete_payment ____________________

fixturedef = <FixtureDef argname='sample_bank' scope='function' baseid='tests'>
request = <SubRequest 'sample_bank' for <Function test_delete_payment>>

    @pytest.hookimpl(wrapper=True)
    def pytest_fixture_setup(fixturedef: FixtureDef, request) -> object | None:
        asyncio_mode = _get_asyncio_mode(request.config)
        if not _is_asyncio_fixture_function(fixturedef.func):
            if asyncio_mode == Mode.STRICT:
                # Ignore async fixtures without explicit asyncio mark in strict mode
                # This applies to pytest_trio fixtures, for example
>               return (yield)
                        ^^^^^

.venv\Lib\site-packages\pytest_asyncio\plugin.py:728: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
tests\conftest.py:101: in sample_bank
    bank = Bank(
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <Bank(name='Nubank', slug='nubank', is_active='None')>
kwargs = {'image_url': 'http://example.com/nubank.png', 'name': 'Nubank', 'primary_color_hex': '#8A05BE', 'slug': 'nubank'}
cls_ = <class 'src.entities.bank.Bank'>, k = 'image_url'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'image_url' is an invalid keyword argument for Bank

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
___________________ ERROR at setup of test_search_payments ____________________

fixturedef = <FixtureDef argname='sample_bank' scope='function' baseid='tests'>
request = <SubRequest 'sample_bank' for <Function test_search_payments>>

    @pytest.hookimpl(wrapper=True)
    def pytest_fixture_setup(fixturedef: FixtureDef, request) -> object | None:
        asyncio_mode = _get_asyncio_mode(request.config)
        if not _is_asyncio_fixture_function(fixturedef.func):
            if asyncio_mode == Mode.STRICT:
                # Ignore async fixtures without explicit asyncio mark in strict mode
                # This applies to pytest_trio fixtures, for example
>               return (yield)
                        ^^^^^

.venv\Lib\site-packages\pytest_asyncio\plugin.py:728: 
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _
tests\conftest.py:101: in sample_bank
    bank = Bank(
.venv\Lib\site-packages\sqlalchemy\orm\state.py:596: in _initialize_instance
    with util.safe_reraise():
         ^^^^^^^^^^^^^^^^^^^
.venv\Lib\site-packages\sqlalchemy\util\langhelpers.py:224: in __exit__
    raise exc_value.with_traceback(exc_tb)
.venv\Lib\site-packages\sqlalchemy\orm\state.py:594: in _initialize_instance
    manager.original_init(*mixed[1:], **kwargs)
_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _

self = <Bank(name='Nubank', slug='nubank', is_active='None')>
kwargs = {'image_url': 'http://example.com/nubank.png', 'name': 'Nubank', 'primary_color_hex': '#8A05BE', 'slug': 'nubank'}
cls_ = <class 'src.entities.bank.Bank'>, k = 'image_url'

    def _declarative_constructor(self: Any, **kwargs: Any) -> None:
        """A simple constructor that allows initialization from kwargs.
    
        Sets attributes on the constructed instance using the names and
        values in ``kwargs``.
    
        Only keys that are present as
        attributes of the instance's class are allowed. These could be,
        for example, any mapped columns or relationships.
        """
        cls_ = type(self)
        for k in kwargs:
            if not hasattr(cls_, k):
>               raise TypeError(
                    "%r is an invalid keyword argument for %s" % (k, cls_.__name__)
                )
E               TypeError: 'image_url' is an invalid keyword argument for Bank

.venv\Lib\site-packages\sqlalchemy\orm\decl_base.py:2179: TypeError
=========================== short test summary info ===========================
ERROR tests/payments/test_service.py::test_create_payment - TypeError: 'image_url' is an invalid keyword argument for Bank
ERROR tests/payments/test_service.py::test_get_payment_by_id - TypeError: 'image_url' is an invalid keyword argument for Bank
ERROR tests/payments/test_service.py::test_pdate_payment - TypeError: 'image_url' is an invalid keyword argument for Bank
ERROR tests/payments/test_service.py::test_delete_payment - TypeError: 'image_url' is an invalid keyword argument for Bank
ERROR tests/payments/test_service.py::test_search_payments - TypeError: 'image_url' is an invalid keyword argument for Bank
========================= 8 passed, 5 errors in 3.75s =========================
